# apis-nomansland

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Pipfile  apis_bibsonomy  pyproject.toml  start.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml  deploy.yml
apis/settings/: dev.py
