[tool.poetry]
name = "apis-nomansland-devops"
version = "0.1.0"
description = "APIS nomansland project for auto devops"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
whitenoise = "^5.2.0"
mysqlclient = "^2.0.2"
apis-bibsonomy = "^0.2.2"
apis-core = "^0.17.6"
apis-highlighter = "^0.9.0"
acdh-django-charts = "^0.5.3"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
django-extensions = "^3.1.0"
pylint = "^2.6.0"
dephell = {extras = ["full"], version = "^0.8.3"}
mistune = "<2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
